Fix urls to stylesheets

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link href="./src/font/Open_Sans/opensans-variablefont_wdthwght-webfont.woff2" rel="preload" as="font" crossorigin>
-    <link rel="stylesheet" href="/css/modern-normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/modern-normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="sidebar">
